# django-archive

./: .gitignore  .travis.yml  LICENSE  LICENSE.txt  README.md  setup.cfg  setup.py  tox.ini
django_archive/: __init__.py  apps.py
django_archive/archivers/: __init__.py  registry.py  tarball.py  zipfile.py
django_archive/management/commands/: archive.py
django_archive/tests/: test_archive.py
django_archive/util/: file.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  settings.rst  usage.rst
tests/: base.py  settings.py  test_archive.py  test_formats.py
tests/sample/: models.py
tests/sample/migrations/: 0001_initial.py
