[metadata]
name = django_archive
version = attr: django_archive.__version__
description = Management command for creating compressed archives of DB tables and uploaded media
author = Nathan Osman
author_email = nathan@quickmediasolutions.com
url = https://github.com/nathan-osman/django-archive
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >=3.6
packages =
    django_archive
    django_archive.archivers
    django_archive.management
    django_archive.management.commands
    django_archive.util
install_requires =
    Django >= 3.0
